--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,21 @@ header{
     text-align: center;
     display: block;
 }
+h2{
+    font-size: 3.6rem;
+    line-height: 1.25;
+    letter-spacing: -.1rem;
+}
+h1,h2,h3,h4,h5,h6{
+    margin-top: 0;
+    margin-bottom: 2rem;
+    font-weight: 300;
+}
+
+p{
+    margin-bottom: 2.5rem;
+    margin-top: 0;
+}
 
 div {
     display: block;
@@ -61,6 +76,9 @@ div {
 .column, .columns {
     margin-left: 4%;
 }
+h2{
+    font-size: 4.2rem;
+}
 }
 @media (min-width: 750px){
     header {
@@ -96,4 +114,37 @@ li{
 
 .submenu #shopping-cart {
     display:none;
+}
+
+#hero {
+    background-image: url(../img/hero.jpg);
+    height: 350px;
+    background-size: cover;
+}
+
+@media(min-width: 550px){
+    .container{
+        width: 80%;
+    }
+    .six.columns{
+        width: 48%;
+    }
+    .column:first-child,
+    .columns:first-child{
+        margin-left: 0;
+    }
+}
+@media (min-width:440px){
+    .container{
+        width: 85%;
+        padding: 0;
+    }
+}
+.hero-content{
+    margin-top: 80px;
+    color: white;
+}
+.hero-content form{
+    position: relative;
+    margin-bottom: 0;
 }
