--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ h1{
     font-size: 5.0rem;
 }
 h4{
-    font-size: 3.0rem;
+    font-size: 2.0rem;
 }
 }
 @media screen and (min-width: 750px){
@@ -123,6 +123,10 @@ img {
     border: 0;
 }
 
+img[Attributes style] {
+width: 100px;
+}
+
 ul{
     list-style: none;
     margin-bottom: 2.5rem;
@@ -131,6 +135,17 @@ ul{
 }
 .submenu {
     position: relative;
+}
+.submenu:hover #shopping-cart{
+    display: block;
+    position: absolute;
+    right:0;
+    top:100%;
+    z-index: 1;
+    background-color: white;
+    padding: 20px;
+    min-height: 400px;
+    min-width: 300px;
 }
 li{
     margin-bottom: 1rem;
@@ -232,6 +247,22 @@ input[type="submit"]{
     background: linear-gradient(to right, #741d51 0%, #e44e52 100%);
 }
 
+table{
+    margin-bottom: 2.5rem;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+th,td{
+    padding: 12px 15px;
+    text-align: left;
+    border-bottom: 1px solid #e1e1e1;
+}
+
+th:first-child, td:first-child{
+    padding-left: 0;
+}
+
 .icon{
     background-repeat: no-repeat;
     background-position: left center;
@@ -257,7 +288,6 @@ input[type="submit"]{
     color: white;
 }
 .card{
-    text-align: center;
     border: 1px solid #e1e1e1;
 }
 .info-card{
@@ -290,6 +320,7 @@ input[type="submit"]{
     display: inline-block;
     height: 38px;
     padding: 0 30px;
+    color: #555;
     text-align: center;
     font-size: 11px;
     font-weight: 600;
@@ -298,6 +329,7 @@ input[type="submit"]{
     text-transform: uppercase;
     text-decoration: none;
     white-space: nowrap;
+    background-color: transparent; 
     border-radius: 4px;
     border: 1px solid #bbb;
     cursor: pointer;
@@ -324,4 +356,13 @@ nav{
 a{
     color: #1EAEDB;
     background-color: transparent;
+}
+
+.remove {
+    background-color: red;
+    border-radius: 50%;
+    padding: 5px 10px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
 }
